sonarqube/sonarqube-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-httproute
  namespace: istio-ingress
spec:
  parentRefs:
    - name: istio-cluster-gateway  
      namespace: istio-ingress
      sectionName: http-sonarqube
  hostnames:
    - "sonarqube.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarqube-sonarqube          # verify actual svc name, see note below
          namespace: sonarqube
          port: 9000
